--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -47,40 +47,40 @@ jobs:
         creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
         allow-no-subscriptions: true
 
-    - name: 'Set subscription'
-      run: az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
+    # - name: 'Set subscription'
+    #   run: az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
 
     - name: Setup node
       uses: actions/setup-node@v2
       with:
         node-version: '14'
     
-    - name: "npm install, build, and test"
+    - name: "Install Dependencies"
       run: |
         npm install   
 
     # -- Version Manifest
-    - name: Set date to variable
-      id: date
-      run: echo "::set-output name=date::$(TZ='Asia/Bangkok' date +'%Y-%m-%d@%H:%M:%S')"
+    # - name: Set date to variable
+    #   id: date
+    #   run: echo "::set-output name=date::$(TZ='Asia/Bangkok' date +'%Y-%m-%d@%H:%M:%S')"
 
-    - name: Set Git SHA to variable
-      id: gitsha
-      run: echo "::set-output name=gitsha::$(git rev-parse HEAD)"
+    # - name: Set Git SHA to variable
+    #   id: gitsha
+    #   run: echo "::set-output name=gitsha::$(git rev-parse HEAD)"
 
-    - name: Check file existence
-      id: check_files
-      uses: andstor/file-existence-action@v1
-      with:
-        files: "version-manifest.html"
+    # - name: Check file existence
+    #   id: check_files
+    #   uses: andstor/file-existence-action@v1
+    #   with:
+    #     files: "version-manifest.html"
 
-    - name: Replace Build Information in Version Manifest File
-      if: steps.check_files.outputs.files_exists == 'true'
-      uses: datamonsters/replace-action@master
-      with:
-        files: 'version-manifest.html'
-        replacements: '$BUILDTIME=${{ steps.date.outputs.date }},$RUNNER_NAME=${{ runner.name }},$GITHUB_REF=${{ env.GITREF }},$GITHUB_REPO=${{ env.REPOSITORY }},$GITHUB_SHA=${{ steps.gitsha.outputs.gitsha }},$GITHUB_WORKFLOW=${{ github.workflow }}#${{ github.run_number }}'
-    # -- Version Manifest
+    # - name: Replace Build Information in Version Manifest File
+    #   if: steps.check_files.outputs.files_exists == 'true'
+    #   uses: datamonsters/replace-action@master
+    #   with:
+    #     files: 'version-manifest.html'
+    #     replacements: '$BUILDTIME=${{ steps.date.outputs.date }},$RUNNER_NAME=${{ runner.name }},$GITHUB_REF=${{ env.GITREF }},$GITHUB_REPO=${{ env.REPOSITORY }},$GITHUB_SHA=${{ steps.gitsha.outputs.gitsha }},$GITHUB_WORKFLOW=${{ github.workflow }}#${{ github.run_number }}'
+    # # -- Version Manifest
 
     - name: "Deploy to Azure WebApp"
       uses: azure/webapps-deploy@v2
