--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -45,11 +45,10 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
-        allow-no-subscriptions: true
 
-    - name: 'Set subscription'
-      run: az account set --subscription 1d00f364-f62c-4896-a77d-e24d36e7d9c8
-
+    # - name: 'Set subscription'
+    #   run: az account set --subscription 1d00f364-f62c-4896-a77d-e24d36e7d9c8
+           
     - name: Setup node
       uses: actions/setup-node@v2
       with:
