--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -14,7 +14,7 @@ on:
         default: "develop"
 
 env:
-  AZURE_WEBAPP_PACKAGE_PATH: "."
+  AZURE_WEBAPP_PACKAGE_PATH: "./dist/*"
   REPOSITORY: "tarathep/bokie-tutorial-frontend"
   # hook branch or tag
   GITREF: ${{ github.event_name == 'repository_dispatch' && 'develop' || github.event.inputs.ref }}
@@ -50,14 +50,16 @@ jobs:
     - name: 'Set subscription'
       run: az account set --subscription 1d00f364-f62c-4896-a77d-e24d36e7d9c8
            
-    # - name: Setup node
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: '14'
+    - name: Setup node
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
     
-    # - name: "Install Dependencies"
-    #   run: |
-    #     npm install   
+    - name: "Install Dependencies & Build"
+      run: |
+        npm install
+        npm run build
+
 
     # -- Version Manifest
     # - name: Set date to variable
