--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -14,7 +14,7 @@ on:
         default: "develop"
 
 env:
-  AZURE_WEBAPP_PACKAGE_PATH: "./dist/*"
+  AZURE_WEBAPP_PACKAGE_PATH: "./dist"
   REPOSITORY: "tarathep/bokie-tutorial-frontend"
   # hook branch or tag
   GITREF: ${{ github.event_name == 'repository_dispatch' && 'develop' || github.event.inputs.ref }}
