--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -56,14 +56,13 @@ jobs:
 
     - name: 'Set subscription'
       run: az account set --subscription 1d00f364-f62c-4896-a77d-e24d36e7d9c8
-           
-
+    
     - name: "Deploy to Azure WebApp"
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ format('app-bokie-tutorial-frontend-{0}-001', 'dev') }}
-        images: '${{ env.CONTAINER_REPOSITORY }}/${{ env.APP_NAME }}:${{env.IMAGE_TAG}}
-  
+        images: '${{ env.CONTAINER_REPOSITORY }}/${{ env.APP_NAME }}:${{env.IMAGE_TAG}}'
+
     - name: Set Web App Settings
       uses: Azure/appservice-settings@v1
       with:
@@ -76,3 +75,6 @@ jobs:
               "slotSetting": false
             }
           ]
+
+
+    
