--- a/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-build-and-deploy.yaml
@@ -16,6 +16,7 @@ on:
 env:
   REPOSITORY: "tarathep/bokie-tutorial-frontend"
   APP_NAME: bokie-tutorial-frontend
+  AZURE_WEB_APP_NAME: app-bokie-tutorial-frontend-dev-001
   CONTAINER_REPOSITORY: "acrbokietutorial001.azurecr.io"
   IMAGE_TAG: "0.0.1-SNAPSHOT"
   GITREF: ${{ github.event_name == 'repository_dispatch' && 'develop' || github.event.inputs.ref }}
@@ -57,13 +58,13 @@ jobs:
     - name: "Deploy to Azure WebApp"
       uses: azure/webapps-deploy@v2
       with:
-        app-name: app-bokie-tutorial-frontend-dev-001
+        app-name: ${{ env.AZURE_WEB_APP_NAME }}
         images: '${{ env.CONTAINER_REPOSITORY }}/${{ env.APP_NAME }}:${{env.IMAGE_TAG}}'
 
     - name: Set Web App Settings
       uses: Azure/appservice-settings@v1
       with:
-        app-name: ${{ format('app-bokie-tutorial-frontend-{0}-001', 'dev') }}
+        app-name: ${{ env.AZURE_WEB_APP_NAME }}
         app-settings-json: |
           [
             {
