change msg input

--- a/.github/workflows/sit-tutorial-frontend-deploy.yaml
+++ b/.github/workflows/sit-tutorial-frontend-deploy.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: "Repository Tag"
+        description: "Image Tag"
         required: true
         default: "0.0.1"
 
