--- a/.github/workflows/dev-tutorial-frontend-deploy.yaml
+++ b/.github/workflows/dev-tutorial-frontend-deploy.yaml
@@ -45,7 +45,7 @@ jobs:
           [
             {
               "name": "VUE_APP_ENPOINT_API_BACKEND",
-              "value": "https://app-bokie-tutorial-backend-dev-001.azurewebsites.net/api/tutorials",
+              "value": "https://app-bokie-tutorial-backend-dev-001.azurewebsites.net/api/tutorials/",
               "slotSetting": false
             }
           ]
